--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,8 +3,8 @@
         <!-- <a href="{{site.baseurl}}/">News</a> -->
         <a href="{{site.baseurl}}/publications/">Publications</a>
         <a href="{{site.baseurl}}/research/">Research</a>
-        <!-- <a href="{{site.baseurl}}/activities/">Activities</a> -->
         <a href="{{site.baseurl}}/teaching/">Teaching</a>
+        <a href="{{site.baseurl}}/activities/">Activities</a>
         <!-- <a href="{{site.baseurl}}/blog/">Blog</a> -->
         <!-- <a href="{{site.baseurl}}/venue/">Venue</a> -->
         <a href="https://drive.google.com/file/d/1r1JulYMyQXiFQiGpUFx5BPopbiE_g0w_/view?usp=sharing">CV</a>
